--- a/css/styles.css
+++ b/css/styles.css
@@ -110,6 +110,31 @@ body.fotos #navegacao a#fotos {
     margin: 0 0 20px 15px;
 }
 
+img {
+    border: 2px colid #dfdfdf;
+}
+
+img.imagem-principal {
+    width: 98%;
+    border: 3px solid #dfdfdf;
+}
+
+h3 {
+    text-transform: uppercase;
+    display: inline;
+    font-size: 0.8em;
+    padding: 3px;
+}
+
+.destaque h3 {
+    background: #b10333;
+    color: #fff;
+}
+
+.entrevista h3 {
+    background: #de003e;
+}
+
 /**Conteúdo Lateral*/
 .caixa {
     margin: 10px 0;
