--- a/css/styles.css
+++ b/css/styles.css
@@ -35,6 +35,15 @@ ul {
     list-style: none;
 }
 
+a:link {
+    color:#b10333;
+    padding: 2px;
+}
+
+a:hover {
+    color: #e50040;
+}
+
 #topo ul{
     margin-top: 30px;
     background: #b10333;
@@ -158,6 +167,7 @@ h3 {
 
 #lista-noticias li a p {
     font-size: 0.7em;
+    color: #000;
 }
 
 #lista-noticias li:hover {
